tests/baselines/reference/callConstructAssignment.errors.txt
tests/cases/compiler/callConstructAssignment.ts(7,1): error TS2322: Type 'new () => any' is not assignable to type '() => void'.
tests/cases/compiler/callConstructAssignment.ts(8,1): error TS2322: Type '() => void' is not assignable to type 'new () => any'.


==== tests/cases/compiler/callConstructAssignment.ts (2 errors) ====
    
    
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! error TS2322: Type 'new () => any' is not assignable to type '() => void'.
    bar = foo; // error
    ~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => any'.